<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_all_in_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bc_logo"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/security_privacy"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_all_in_one2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_all_in_one"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/label_rest_assured"
            android:textColor="@color/White"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_all_in_one2"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/component_white_borders"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:src="@drawable/ic_lock" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/label_industry_standard"
                android:textColor="@color/White"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ic_key" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/label_share_data"
                android:textColor="@color/White"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:src="@drawable/ic_wifi"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/label_secure_communication"
                android:textColor="@color/White"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>