<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/section_1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/status_section_bg"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageView
        android:id="@+id/status_circle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/status_grey" />

    <TextView
        android:id="@+id/shift_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/shift_status"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/status_description"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/status_circle"
        android:layout_toRightOf="@id/shift_status"
        android:ellipsize="end"
        android:gravity="right"
        android:text="@string/unknown"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/status_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/shift_status"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:text="description"/>

    <TextView
        android:id="@+id/something_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/status_description"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/if_you_believe_there_was"
        android:textColor="@android:color/white"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/last_sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="@string/last_sync_n_a"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        android:layout_below="@id/something_wrong"/>

</RelativeLayout>