<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@drawable/avatar_placeholder"
                app:border_color="#FF000000" />

            <TextView
                android:id="@+id/drawer_header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_pic_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:gravity="center_horizontal"
                android:text="User Name"
                android:textColor="@color/background_blue_darker"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/drawer_header_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drawer_header_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:autoLink="email"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="5dp"
                android:lines="2"
                android:text="Email Address"
                android:textColor="@color/background_blue_darker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shift_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/shift_information"
                android:textColor="@color/White"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/tvDot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dots"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/tvMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSecond"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="top"
                        android:layout_weight="8"
                        android:text="@string/sec"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/tvSecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="4"
                        android:text="@string/seconds"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background_blue_darker" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shift_name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_sync_time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/work_days" />
                </LinearLayout>

                <!--<View-->
                    <!--android:layout_width="1dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:background="@color/black" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="shift name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="data sync time" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mon - Fri" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/shift_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/management_information"
                android:textColor="@color/White"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/manager"
                android:textColor="@android:color/black"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/manager_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="Manager Name"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>